# geoflow-bundle

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  README.md  base-ubuntu.dockerfile  base.dockerfile  brecon.dockerfile  build.bat  build.sh  build_test.sh  build_test_plugin.sh  builder-ubuntu.dockerfile  builder.dockerfile  debugger.dockerfile  flake.nix  geoflow-bundle.dockerfile  lod13tool.dockerfile  lod22-reconstruct.dockerfile  strip_docker.sh  test-app.dockerfile  test-builder.dockerfile  vcpkg.json  vcpkg.json.bak
.github/workflows/: build-docker-base.yml  build-docker-builder.yml  build-docker-test.yml  build.yml  build.yml.bak  build_test_gdal.yml.bak  build_test_plugin.yml  release.yml  test-grep.yml
cmake/: lod22-reconstruct.bat.in  lod22-reconstruct.sh.in
cmake/nsis/: NSIS.InstallOptions.ini.in  NSIS.template.in
test_plugin/: CMakeLists.txt  library.h
